# pdf_to_speech

./: README.md  apk-builder.html  app.py  buildozer.spec  launcher.py  main.py  mobile_main.py  pdf_to_speech.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk-briefcase.yml  build-apk.yml
